# oasis

./: .gitignore  README.md  config.example.toml  experiment.example.toml  experiment.toml  fettling_TODO.md  interactive_gpu_dev.example.sh  mlip.example.toml  pyproject.toml  requirements.txt  submit.example.sh  uma_batch_relax.ipynb  uma_batch_relax.py
docs/: comparative_learning_cache_model.md  gpu_setup.md  time_accuracy_protocol.md
envs/: README.md
envs/mace/: requirements.txt
envs/mattersim/: requirements.txt
envs/orb_v3/: requirements.txt
envs/sevennet/: requirements.txt
envs/uma/: requirements.txt
scripts/: bootstrap_gpu_env.sh  build_all_dataset_zero_shot.sh  build_all_datasets.sh  rebuild_mlip_envs.sh  submit_configured_datasets.py
slurm/: mlip_one.sbatch  mlip_submit.sh
src/adapters/: mattersim_adapter.py
src/oasis/: __main__.py  analysis.py  analysis_workflows.py  app_config.py  calibration.py  calibration_metrics.py  candidate_ranking_runner.py  config.py  config_base.py  dataset.py  dataset_overrides.py  evaluate.py  exp.py  experiment_config.py  experiment_data.py  experiment_runner.py  extract_mlip_results.py  figure.py  gnn.py  graph.py  graphs.py  io.py  method.py  methods.py  mlip_config.py  mlip_features.py  model.py  moe.py  plot.py  probe.py  probe_features.py  processing.py  submission.py  subset_mlips.py  sweep.py  train.py  tune.py
src/oasis/adapters/: mace_adapter.py  mattersim_adapter.py  orb_v3_adapter.py  rootstock_adapter.py  sevennet_adapter.py  uma_adapter.py
src/oasis/candidate_ranking/: __init__.py  interfaces.py  loaders.py  methods.py  pipeline.py  predictors.py  registry.py  types.py  zero_shot.py
src/oasis/experiment/: __init__.py  core.py  dataset.py  learning_curve.py  orchestration.py  policy_diagnostic.py  repeat_metrics.py  screening.py  splits.py
src/oasis/gcnn/: EnvironmentNotes.txt  GCNN_FirstTry.ipynb  GCNN_Mace.ipynb  GCNN_surfEp.ipynb  LinearFit_SurfEP_DirectFit.ipynb  Untitled.ipynb  (+8 more)
tests/: support.py  test_calibration.py  test_calibration_metrics.py  test_calibration_splits.py  test_candidate_ranking_config.py  test_candidate_ranking_interfaces.py  test_candidate_ranking_loaders.py  test_candidate_ranking_methods.py  test_candidate_ranking_pipeline.py  test_candidate_ranking_zero_shot.py  test_config.py  test_dataset.py  test_dataset_overrides.py  test_evaluate.py  test_exp.py  test_experiment_runner.py  test_figure.py  test_graph.py  test_graphs.py  test_io.py  test_learning_curve_results_io.py  test_learning_curve_time_accuracy.py  test_main.py  test_method.py  test_mlip_artifacts.py  test_mlip_cli.py  test_mlip_result_parsing.py  test_mlip_timing.py  test_model.py  test_moe_calibration.py  test_packaging.py  test_plot.py  test_probe_features.py  test_residual_calibration.py  test_ridge_calibration.py  test_submission.py  test_sweep.py  test_train.py  test_tune.py  test_weighted_linear_calibration.py  (+1 more)
tests/experiment/: test_dataset.py  test_policy_diagnostic.py  test_repeat_metrics.py  test_splits.py
(+38 files in other folders)
